homework Api correct